Description of image no. 2 updated

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="images">
 		
 			<img src="images/img1.jpg" alt="The Small Cold Valley, High Tatras, Slovakia">
-			<img src="images/img2.jpg" alt="Snowed Tatras from route to Popradské tarn"><br>
+			<img src="images/img2.jpg" alt="Snowed Tatras from route to Popradské tarn, High Tatras, Slovakia"><br>
 			<img src="images/img3.jpg" alt="Slavkovský peak, High Tatras, Slovakia">
 			<img src="images/img4.jpg" alt="Church near Mojstrana, Slovenia"><br>
 			<img src="images/img5.jpg" alt="The Great Cold Valley, High Tatras, Slovakia">
