--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 	
 		<title>Simple Image slider</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/script.js"></script>
 		
@@ -29,11 +29,11 @@
 		<div id="images">
 		
 			<img src="images/img1.jpg" alt="The Small Cold Valley, High Tatras, Slovakia">
-			<img src="images/img2.jpg" alt="Snowed Tatras from route to Popradské tarn, High Tatras, Slovakia"><br>
-			<img src="images/img3.jpg" alt="Slavkovský peak, High Tatras, Slovakia">
+			<img src="images/img2.jpg" alt="Snowed Tatras from route to PopradskÃ© tarn, High Tatras, Slovakia"><br>
+			<img src="images/img3.jpg" alt="SlavkovskÃ½ peak, High Tatras, Slovakia">
 			<img src="images/img4.jpg" alt="Church near Mojstrana, Slovenia"><br>
 			<img src="images/img5.jpg" alt="The Great Cold Valley, High Tatras, Slovakia">
-			<img src="images/img6.jpg" alt="Chmarošský viaduct near Telgárt, Slovakia">
+			<img src="images/img6.jpg" alt="ChmaroÅ¡skÃ½ viaduct near TelgÃ¡rt, Slovakia">
 
 		</div>	
 
