--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Simple Image slider</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
-		<script src="js/script.js"></script>
+		<!-- <script src="js/script.js"></script> -->
 		
 	</head>
 	
@@ -36,6 +36,8 @@
 			<img src="images/img6.jpg" alt="Chmarošský viaduct near Telgárt, Slovakia">
 
 		</div>	
+		
+		<script src="js/script.js"></script>
 
 	</body>
 	
